curve-fit bug fix

--- a/curve-fit.ipynb
+++ b/curve-fit.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +20,7 @@
       "Life expectancy at birth, total (years) done\n",
       "Inflation, consumer prices (annual %) done\n",
       "All documents done\n",
-      "134.42798018455505\n"
+      "128.4631700515747\n"
      ]
     }
    ],
@@ -45,7 +38,7 @@
     "\n",
     "\n",
     "# Import Spreadsheet\n",
-    "df = pd.ExcelFile('/countrydata.xlsx')\n",
+    "df = pd.ExcelFile('countrydata.xlsx')\n",
     "\n",
     "#Import sheets to dataframes\n",
     "aid = df.parse('Foreign Aid').set_index(['Country Name'])\n",
@@ -134,38 +127,6 @@
     "inflation.to_excel(writer,'Inflation')\n",
     "writer.save()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'GDP (constant 2010 US$)'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
